[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main_menu/menu.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/assets/Menu.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.35
anchor_top = 0.2
anchor_right = 0.65
anchor_bottom = 0.8
margin_left = 0.435974
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNewGame" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 306.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 50 )
text = "Начать игру"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 306.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 50 )
text = "Выход"

[node name="Control" type="Control" parent="."]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="TextureButton" parent="Control/CenterContainer"]
margin_left = 26.0
margin_top = 35.0
margin_right = 76.0
margin_bottom = 85.0
rect_min_size = Vector2( 50, 50 )

[connection signal="pressed" from="VBoxContainer/ButtonNewGame" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="Control/CenterContainer/ButtonSound" to="." method="_on_ButtonSound_pressed"]
